Fixing progress bar text vertical alignment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -272,6 +272,7 @@ ul.progress-bar ul {
   p {
     color: $white;
     font-size: 2.1rem;
+    line-height: 1.6;
     margin-left: 1rem;
     padding: 0;
     text-align: left;
